src/OpenCvSharp/Internal/Interop/NativeMethods.Features2D.DllImport.cs

#if !NET7_0_OR_GREATER
using System;
using System.Runtime.InteropServices;

namespace JYPPX.OpenCvSharp.Internal.Interop
{
    internal static unsafe partial class NativeMethods
    {
        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_orb_create")]
        internal static extern int Features2DOrbCreate(int maxFeatures, float scaleFactor, int nLevels, int edgeThreshold, int firstLevel, int wtaK, int scoreType, int patchSize, int fastThreshold, out IntPtr orb);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_orb_release")]
        internal static extern void Features2DOrbRelease(IntPtr orb);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_orb_clear")]
        internal static extern int Features2DOrbClear(IntPtr orb);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_orb_empty")]
        internal static extern int Features2DOrbEmpty(IntPtr orb, out int empty);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_orb_get_max_features")]
        internal static extern int Features2DOrbGetMaxFeatures(IntPtr orb, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_orb_set_max_features")]
        internal static extern int Features2DOrbSetMaxFeatures(IntPtr orb, int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_orb_get_scale_factor")]
        internal static extern int Features2DOrbGetScaleFactor(IntPtr orb, out double value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_orb_set_scale_factor")]
        internal static extern int Features2DOrbSetScaleFactor(IntPtr orb, double value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_orb_get_nlevels")]
        internal static extern int Features2DOrbGetNLevels(IntPtr orb, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_orb_set_nlevels")]
        internal static extern int Features2DOrbSetNLevels(IntPtr orb, int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_orb_get_edge_threshold")]
        internal static extern int Features2DOrbGetEdgeThreshold(IntPtr orb, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_orb_set_edge_threshold")]
        internal static extern int Features2DOrbSetEdgeThreshold(IntPtr orb, int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_orb_get_first_level")]
        internal static extern int Features2DOrbGetFirstLevel(IntPtr orb, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_orb_set_first_level")]
        internal static extern int Features2DOrbSetFirstLevel(IntPtr orb, int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_orb_get_wta_k")]
        internal static extern int Features2DOrbGetWtaK(IntPtr orb, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_orb_set_wta_k")]
        internal static extern int Features2DOrbSetWtaK(IntPtr orb, int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_orb_get_score_type")]
        internal static extern int Features2DOrbGetScoreType(IntPtr orb, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_orb_set_score_type")]
        internal static extern int Features2DOrbSetScoreType(IntPtr orb, int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_orb_get_patch_size")]
        internal static extern int Features2DOrbGetPatchSize(IntPtr orb, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_orb_set_patch_size")]
        internal static extern int Features2DOrbSetPatchSize(IntPtr orb, int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_orb_get_fast_threshold")]
        internal static extern int Features2DOrbGetFastThreshold(IntPtr orb, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_orb_set_fast_threshold")]
        internal static extern int Features2DOrbSetFastThreshold(IntPtr orb, int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_orb_descriptor_size")]
        internal static extern int Features2DOrbDescriptorSize(IntPtr orb, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_orb_descriptor_type")]
        internal static extern int Features2DOrbDescriptorType(IntPtr orb, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_orb_default_norm")]
        internal static extern int Features2DOrbDefaultNorm(IntPtr orb, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_orb_detect_count")]
        internal static extern int Features2DOrbDetectCount(IntPtr orb, IntPtr image, IntPtr mask, out int keypointCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_orb_detect_fill")]
        internal static extern int Features2DOrbDetectFill(IntPtr orb, IntPtr image, IntPtr mask, NativeKeyPoint* keypoints, int keypointCapacity, out int keypointCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_orb_compute")]
        internal static extern int Features2DOrbCompute(IntPtr orb, IntPtr image, NativeKeyPoint* keypointsIn, int keypointCount, NativeKeyPoint* keypointsOut, int keypointCapacity, out int writtenKeypointCount, IntPtr descriptors);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_orb_detect_and_compute_count")]
        internal static extern int Features2DOrbDetectAndComputeCount(IntPtr orb, IntPtr image, IntPtr mask, NativeKeyPoint* keypointsIn, int keypointCount, int useProvidedKeypoints, out int outputKeypointCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_orb_detect_and_compute_fill")]
        internal static extern int Features2DOrbDetectAndComputeFill(IntPtr orb, IntPtr image, IntPtr mask, NativeKeyPoint* keypointsIn, int keypointCount, int useProvidedKeypoints, NativeKeyPoint* keypointsOut, int keypointCapacity, out int outputKeypointCount, IntPtr descriptors);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_bf_matcher_create")]
        internal static extern int Features2DBFMatcherCreate(int normType, int crossCheck, out IntPtr matcher);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_bf_matcher_release")]
        internal static extern void Features2DBFMatcherRelease(IntPtr matcher);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_bf_matcher_get_norm_type")]
        internal static extern int Features2DBFMatcherGetNormType(IntPtr matcher, out int normType);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_bf_matcher_get_cross_check")]
        internal static extern int Features2DBFMatcherGetCrossCheck(IntPtr matcher, out int crossCheck);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_bf_matcher_is_mask_supported")]
        internal static extern int Features2DBFMatcherIsMaskSupported(IntPtr matcher, out int supported);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_bf_matcher_empty")]
        internal static extern int Features2DBFMatcherEmpty(IntPtr matcher, out int empty);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_bf_matcher_clear")]
        internal static extern int Features2DBFMatcherClear(IntPtr matcher);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_bf_matcher_train")]
        internal static extern int Features2DBFMatcherTrain(IntPtr matcher);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_bf_matcher_add")]
        internal static extern int Features2DBFMatcherAdd(IntPtr matcher, IntPtr* descriptors, int descriptorCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_descriptor_matcher_create_by_type")]
        internal static extern int Features2DDescriptorMatcherCreateByType(int matcherType, out IntPtr matcher);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_descriptor_matcher_create_by_name")]
        internal static extern int Features2DDescriptorMatcherCreateByName(byte* matcherName, int matcherNameLength, out IntPtr matcher);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_descriptor_matcher_release")]
        internal static extern void Features2DDescriptorMatcherRelease(IntPtr matcher);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_descriptor_matcher_clone")]
        internal static extern int Features2DDescriptorMatcherClone(IntPtr matcher, int emptyTrainData, out IntPtr clone);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_descriptor_matcher_is_mask_supported")]
        internal static extern int Features2DDescriptorMatcherIsMaskSupported(IntPtr matcher, out int supported);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_descriptor_matcher_empty")]
        internal static extern int Features2DDescriptorMatcherEmpty(IntPtr matcher, out int empty);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_descriptor_matcher_clear")]
        internal static extern int Features2DDescriptorMatcherClear(IntPtr matcher);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_descriptor_matcher_train")]
        internal static extern int Features2DDescriptorMatcherTrain(IntPtr matcher);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_descriptor_matcher_add")]
        internal static extern int Features2DDescriptorMatcherAdd(IntPtr matcher, IntPtr* descriptors, int descriptorCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_descriptor_matcher_get_train_descriptors_count")]
        internal static extern int Features2DDescriptorMatcherGetTrainDescriptorsCount(IntPtr matcher, out int descriptorCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_descriptor_matcher_get_train_descriptor_clone")]
        internal static extern int Features2DDescriptorMatcherGetTrainDescriptorClone(IntPtr matcher, int index, out IntPtr descriptor);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_bf_matcher_clone")]
        internal static extern int Features2DBFMatcherClone(IntPtr matcher, int emptyTrainData, out IntPtr clone);
